--- a/sante-mentale.html
+++ b/sante-mentale.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Collection Santé Mentale</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/sante-mentale.css">
 
 </head>
 <body>
     <header>
-        <img src="images/header.png" alt="Header">
+        <a href="index.html"><img src="images/header.png" alt="Header"></a>
     </header>
     
     <section class="gallery">
